eliminated builder with fewer constructors than original